--- a/apps/comments-feed/src/app/app.component.html
+++ b/apps/comments-feed/src/app/app.component.html
@@ -20,16 +20,23 @@
     <button (click)="submit()">comment</button>
   </div>
 
-  <div>
+  <div class="comment-preview">
     <p>Comments Area</p>
     <ng-container *ngIf="comments$ | async as comments">
-      <mailchimp-monorepo-comment-block 
-      *ngFor="let comment of comments"
-      [name]="comment.name"
-      [message]="comment.message"
-      [createdAt]="comment.created"
-      >
-      </mailchimp-monorepo-comment-block>
+      <ng-container *ngIf=" comments && comments?.length > 0; else showNoComments">
+        <mailchimp-monorepo-comment-block 
+        *ngFor="let comment of comments"
+        [name]="comment?.name"
+        [message]="comment?.message"
+        [createdAt]="comment?.created"
+        class="posted-comments"
+        >
+        </mailchimp-monorepo-comment-block>
+      </ng-container>
+      <ng-template #showNoComments>
+        No comments for now ...
+      </ng-template>
+     
     </ng-container>
   </div>
 </div>
