--- a/apps/comments-feed/src/app/app.component.scss
+++ b/apps/comments-feed/src/app/app.component.scss
@@ -33,4 +33,20 @@
       height: 150px;
     }
   }
+
+  > .comment-preview{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    > .posted-comments{
+      &:not(first-child){
+        padding-bottom: 15px;
+      }
+
+      &:last-child{
+        padding-bottom: 0;
+      }
+    }
+  }
 }
