--- a/apps/comments-feed/src/app/comment-block/comment-block.component.html
+++ b/apps/comments-feed/src/app/comment-block/comment-block.component.html
@@ -1,4 +1,7 @@
 <div class="comment-block">
-    <p>{{message}}</p>
-    <p>{{name}} on {{createdAt | date: 'mediumDate' }} at {{createdAt | date: 'mediumTime' }}</p>
+  <p>{{ message }}</p>
+  <p>
+    {{ name }} on {{ createdAt | date: 'mediumDate' }} at
+    {{ createdAt | date: 'mediumTime' }}
+  </p>
 </div>
