--- a/apps/comments-feed/src/app/app.component.html
+++ b/apps/comments-feed/src/app/app.component.html
@@ -24,6 +24,7 @@
     <p>Comments Area</p>
     <ng-container *ngIf="comments$ | async as comments">
       <ng-container *ngIf=" comments && comments?.length > 0; else showNoComments">
+        <button>delete comments</button>
         <mailchimp-monorepo-comment-block 
         *ngFor="let comment of comments"
         [name]="comment?.name"
@@ -36,7 +37,6 @@
       <ng-template #showNoComments>
         No comments for now ...
       </ng-template>
-     
     </ng-container>
   </div>
 </div>
