--- a/apps/comments-feed/src/app/comment-block/comment-block.component.scss
+++ b/apps/comments-feed/src/app/comment-block/comment-block.component.scss
@@ -1,6 +1,13 @@
-.comment-block{
-    border: 1px grey solid;
-    border-radius: 0.5rem;
-    padding: 15px;
-    width: 600px;
+.comment-block {
+  border: 1px grey solid;
+  border-radius: 0.5rem;
+  padding: 15px;
+  width: 600px;
+
+  > .comment-info {
+    > .commenter-name {
+      font-family:'Courier';
+      font-weight: 500;
+    }
+  }
 }
